v2 of scrapper which is using json files not html

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "@playwright/test": "^1.14.1",
     "playwright": "^1.14.1"
+  },
+  "dependencies": {
+    "axios": "^0.21.4"
   }
 }
